fix javadoc and use new java features